fix(ci): use correct gitleaks binary for ARM architecture
- Changed runner from ubuntu-latest to prod-vm
- Auto-detect architecture and download arm64 or x64 binary accordingly
- Fixes 'cannot execute binary file: Exec format error'

--- a/.gitea/workflows/secret-scan.yaml
+++ b/.gitea/workflows/secret-scan.yaml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   secret-scan:
-    runs-on: ubuntu-latest
+    runs-on: prod-vm
     steps:
       - uses: actions/checkout@v4
         with:
@@ -11,8 +11,14 @@ jobs:
 
       - name: Install gitleaks
         run: |
-          wget -q https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz
-          tar -xzf gitleaks_8.18.0_linux_x64.tar.gz
+          ARCH=$(uname -m)
+          if [ "$ARCH" = "aarch64" ] || [ "$ARCH" = "arm64" ]; then
+            GITLEAKS_ARCH="arm64"
+          else
+            GITLEAKS_ARCH="x64"
+          fi
+          wget -q "https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_${GITLEAKS_ARCH}.tar.gz"
+          tar -xzf "gitleaks_8.18.0_linux_${GITLEAKS_ARCH}.tar.gz"
           chmod +x gitleaks
 
       - name: Scan for secrets
